// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scaleY renders 0 1`] = `
Array [
  .c0 {
  -webkit-transform: scaleY(0);
  -ms-transform: scaleY(0);
  transform: scaleY(0);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: scaleY(0);
  -ms-transform: scaleY(0);
  transform: scaleY(0);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: scaleY(0);
  -ms-transform: scaleY(0);
  transform: scaleY(0);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: scaleY(0);
  -ms-transform: scaleY(0);
  transform: scaleY(0);
}

<div
    className="c0"
  />,
]
`;

exports[`scaleY renders function 1`] = `
Array [
  .c0 {
  -webkit-transform: scaleY(hasnot);
  -ms-transform: scaleY(hasnot);
  transform: scaleY(hasnot);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: scaleY(has);
  -ms-transform: scaleY(has);
  transform: scaleY(has);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: scaleY(hasnot);
  -ms-transform: scaleY(hasnot);
  transform: scaleY(hasnot);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: scaleY(has);
  -ms-transform: scaleY(has);
  transform: scaleY(has);
}

<div
    className="c0"
  />,
]
`;

exports[`scaleY renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-transform: scaleY(invalid.path.1);
  -ms-transform: scaleY(invalid.path.1);
  transform: scaleY(invalid.path.1);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: scaleY(invalid.path.1);
  -ms-transform: scaleY(invalid.path.1);
  transform: scaleY(invalid.path.1);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: scaleY(invalid.path.1);
  -ms-transform: scaleY(invalid.path.1);
  transform: scaleY(invalid.path.1);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: scaleY(invalid.path.1);
  -ms-transform: scaleY(invalid.path.1);
  transform: scaleY(invalid.path.1);
}

<div
    className="c0"
  />,
]
`;

exports[`scaleY renders negative number 1`] = `
Array [
  .c0 {
  -webkit-transform: scaleY(-54881);
  -ms-transform: scaleY(-54881);
  transform: scaleY(-54881);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: scaleY(-54881);
  -ms-transform: scaleY(-54881);
  transform: scaleY(-54881);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: scaleY(-42365);
  -ms-transform: scaleY(-42365);
  transform: scaleY(-42365);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: scaleY(-42365);
  -ms-transform: scaleY(-42365);
  transform: scaleY(-42365);
}

<div
    className="c0"
  />,
]
`;

exports[`scaleY renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-transform: scaleY(July);
    -ms-transform: scaleY(July);
    transform: scaleY(July);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: scaleY(August);
    -ms-transform: scaleY(August);
    transform: scaleY(August);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: scaleY(September);
    -ms-transform: scaleY(September);
    transform: scaleY(September);
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transform: scaleY(November);
    -ms-transform: scaleY(November);
    transform: scaleY(November);
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-transform: scaleY(July);
    -ms-transform: scaleY(July);
    transform: scaleY(July);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: scaleY(August);
    -ms-transform: scaleY(August);
    transform: scaleY(August);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: scaleY(September);
    -ms-transform: scaleY(September);
    transform: scaleY(September);
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transform: scaleY(November);
    -ms-transform: scaleY(November);
    transform: scaleY(November);
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: scaleY(May);
    -ms-transform: scaleY(May);
    transform: scaleY(May);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: scaleY(June);
    -ms-transform: scaleY(June);
    transform: scaleY(June);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: scaleY(April);
    -ms-transform: scaleY(April);
    transform: scaleY(April);
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transform: scaleY(November);
    -ms-transform: scaleY(November);
    transform: scaleY(November);
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: scaleY(May);
    -ms-transform: scaleY(May);
    transform: scaleY(May);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: scaleY(June);
    -ms-transform: scaleY(June);
    transform: scaleY(June);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-transform: scaleY(April);
    -ms-transform: scaleY(April);
    transform: scaleY(April);
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-transform: scaleY(November);
    -ms-transform: scaleY(November);
    transform: scaleY(November);
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scaleY renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    -webkit-transform: scaleY(July);
    -ms-transform: scaleY(July);
    transform: scaleY(July);
  }
}

@media April {
  .c0 {
    -webkit-transform: scaleY(August);
    -ms-transform: scaleY(August);
    transform: scaleY(August);
  }
}

@media January {
  .c0 {
    -webkit-transform: scaleY(September);
    -ms-transform: scaleY(September);
    transform: scaleY(September);
  }
}

@media April {
  .c0 {
    -webkit-transform: scaleY(November);
    -ms-transform: scaleY(November);
    transform: scaleY(November);
  }
}

@media June {
  .c0 {
    -webkit-transform: scaleY(August);
    -ms-transform: scaleY(August);
    transform: scaleY(August);
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-transform: scaleY(July);
    -ms-transform: scaleY(July);
    transform: scaleY(July);
  }
}

@media April {
  .c0 {
    -webkit-transform: scaleY(August);
    -ms-transform: scaleY(August);
    transform: scaleY(August);
  }
}

@media January {
  .c0 {
    -webkit-transform: scaleY(September);
    -ms-transform: scaleY(September);
    transform: scaleY(September);
  }
}

@media April {
  .c0 {
    -webkit-transform: scaleY(November);
    -ms-transform: scaleY(November);
    transform: scaleY(November);
  }
}

@media June {
  .c0 {
    -webkit-transform: scaleY(August);
    -ms-transform: scaleY(August);
    transform: scaleY(August);
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-transform: scaleY(January);
    -ms-transform: scaleY(January);
    transform: scaleY(January);
  }
}

@media April {
  .c0 {
    -webkit-transform: scaleY(December);
    -ms-transform: scaleY(December);
    transform: scaleY(December);
  }
}

@media January {
  .c0 {
    -webkit-transform: scaleY(April);
    -ms-transform: scaleY(April);
    transform: scaleY(April);
  }
}

@media April {
  .c0 {
    -webkit-transform: scaleY(May);
    -ms-transform: scaleY(May);
    transform: scaleY(May);
  }
}

@media June {
  .c0 {
    -webkit-transform: scaleY(June);
    -ms-transform: scaleY(June);
    transform: scaleY(June);
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-transform: scaleY(January);
    -ms-transform: scaleY(January);
    transform: scaleY(January);
  }
}

@media April {
  .c0 {
    -webkit-transform: scaleY(December);
    -ms-transform: scaleY(December);
    transform: scaleY(December);
  }
}

@media January {
  .c0 {
    -webkit-transform: scaleY(April);
    -ms-transform: scaleY(April);
    transform: scaleY(April);
  }
}

@media April {
  .c0 {
    -webkit-transform: scaleY(May);
    -ms-transform: scaleY(May);
    transform: scaleY(May);
  }
}

@media June {
  .c0 {
    -webkit-transform: scaleY(June);
    -ms-transform: scaleY(June);
    transform: scaleY(June);
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scaleY renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-transform: scaleY(54881);
  -ms-transform: scaleY(54881);
  transform: scaleY(54881);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: scaleY(54881);
  -ms-transform: scaleY(54881);
  transform: scaleY(54881);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: scaleY(42365);
  -ms-transform: scaleY(42365);
  transform: scaleY(42365);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: scaleY(42365);
  -ms-transform: scaleY(42365);
  transform: scaleY(42365);
}

<div
    className="c0"
  />,
]
`;

exports[`scaleY renders string 1`] = `
Array [
  .c0 {
  -webkit-transform: scaleY(July);
  -ms-transform: scaleY(July);
  transform: scaleY(July);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: scaleY(July);
  -ms-transform: scaleY(July);
  transform: scaleY(July);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: scaleY(June);
  -ms-transform: scaleY(June);
  transform: scaleY(June);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: scaleY(June);
  -ms-transform: scaleY(June);
  transform: scaleY(June);
}

<div
    className="c0"
  />,
]
`;

exports[`scaleY renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-transform: scaleY(DarkSlateBlue);
  -ms-transform: scaleY(DarkSlateBlue);
  transform: scaleY(DarkSlateBlue);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: scaleY(DarkSlateBlue);
  -ms-transform: scaleY(DarkSlateBlue);
  transform: scaleY(DarkSlateBlue);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: scaleY(DarkSlateBlue);
  -ms-transform: scaleY(DarkSlateBlue);
  transform: scaleY(DarkSlateBlue);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-transform: scaleY(DarkSlateBlue);
  -ms-transform: scaleY(DarkSlateBlue);
  transform: scaleY(DarkSlateBlue);
}

<div
    className="c0"
  />,
]
`;
